tests/force_recheck_focus/force_recheck_focus.exp
===== force-recheck of a unchanged file does nothing: =====
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

===== force-recheck --focus of a unchanged file does a recheck: =====
Error -------------------------------------------------------------------------------------------------------- a.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:3:17
   3| var x: string = 123;
                      ^^^ [1]

References:
   a.js:3:8
   3| var x: string = 123;
             ^^^^^^ [2]



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
